--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="consultant.com.haiphat.consultant.view.auth.ForgotPasswordActivity">
+    tools:context="haiphat.com.bds.nghetuvan.view.auth.ForgotPasswordActivity">
 
 </android.support.constraint.ConstraintLayout>
