--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="consultant.com.haiphat.consultant.view.auth.LoginActivity">
+        tools:context="haiphat.com.bds.nghetuvan.view.auth.LoginActivity">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tilEmail"
