--- a/app/src/main/res/layout/activity_regester.xml
+++ b/app/src/main/res/layout/activity_regester.xml
@@ -5,7 +5,7 @@
 
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        tools:context="consultant.com.haiphat.consultant.view.auth.RegisterActivity">
+        tools:context="haiphat.com.bds.nghetuvan.view.auth.RegisterActivity">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tilEmail"
