--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_splash"
-    tools:context="consultant.com.haiphat.consultant.view.SplashActivity">
+    tools:context="haiphat.com.bds.nghetuvan.view.SplashActivity">
 
 </android.support.constraint.ConstraintLayout>
