--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="consultant.com.haiphat.consultant.view.HomeActivity"
+        tools:context="haiphat.com.bds.nghetuvan.view.HomeActivity"
         tools:showIn="@layout/app_bar_home">
 
         <android.support.v7.widget.RecyclerView
