--- a/app/src/main/res/layout/activity_detail_news.xml
+++ b/app/src/main/res/layout/activity_detail_news.xml
@@ -12,112 +12,87 @@
             style="@style/matchWrap"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/collapsing_toolbar_layout"
-                style="@style/matchWrap"
-                android:layout_height="200dp"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            <RelativeLayout
+                android:id="@+id/rl_group_toolbar_top"
+                android:layout_width="match_parent"
+                android:background="@color/backgroundAuth"
+                android:layout_height="230dp">
 
                 <ImageView
-                    android:id="@+id/imCovert"
-                    style="@style/matchParent"
-                    android:background="@drawable/ic_defaul_bg_my_course"
-                    android:scaleType="centerCrop" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@drawable/gradient_top" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/gradient_buttom" />
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    app:layout_collapseMode="pin"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <haiphat.com.bds.nghetuvan.utils.RippleView
-                            android:id="@+id/rippleBack"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp">
-
-                            <ImageView
-                                android:id="@+id/imgBack"
-                                style="@style/wrapContent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                android:src="@drawable/ic_back" />
-                        </haiphat.com.bds.nghetuvan.utils.RippleView>
-
-                        <TextView
-                            android:id="@+id/tvTitle"
-                            style="@style/wrapContent"
-                            android:layout_centerVertical="true"
-                            android:layout_toLeftOf="@+id/rippleSetting"
-                            android:layout_toRightOf="@+id/rippleBack"
-                            android:ellipsize="end"
-                            android:maxLines="1"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="16sp"
-                            app:layout_collapseMode="parallax"
-                            tools:text="Category name" />
-
-                        <haiphat.com.bds.nghetuvan.utils.RippleView
-                            android:id="@+id/rippleSetting"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:layout_alignParentRight="true">
-
-                            <ImageView
-                                android:id="@+id/imgSetting"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/ic_setting"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-                        </haiphat.com.bds.nghetuvan.utils.RippleView>
-                    </RelativeLayout>
-                </android.support.v7.widget.Toolbar>
-
-                <RelativeLayout
-                    android:id="@+id/rl_group_toolbar_bottom"
+                    android:id="@+id/im_course_detail"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="bottom"
-                    android:padding="20dp"
-                    app:layout_collapseMode="parallax">
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_defaul_bg_my_course" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/gradient_top" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                    <haiphat.com.bds.nghetuvan.utils.RippleView
+                        android:id="@+id/rippleBack"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp">
+
+                        <ImageView
+                            android:id="@+id/imgBack"
+                            style="@style/wrapContent"
+                            android:src="@drawable/ic_back"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </haiphat.com.bds.nghetuvan.utils.RippleView>
 
                     <TextView
-                        android:id="@+id/tvNameCourse"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/tvTitle"
+                        style="@style/wrapContent"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/rippleSetting"
+                        android:layout_toRightOf="@+id/rippleBack"
                         android:ellipsize="end"
-                        android:fontFamily="sans-serif"
-                        android:maxLines="2"
+                        android:maxLines="1"
                         android:textColor="@color/colorWhite"
-                        android:textSize="24sp"
-                        android:textStyle="normal"
-                        tools:text="Khoá học lập trình và thiết kế web ngôn ngữ ASP.net " />
+                        android:textSize="16sp"
+                        app:layout_collapseMode="parallax"
+                        tools:text="Category name" />
 
+                    <haiphat.com.bds.nghetuvan.utils.RippleView
+                        android:id="@+id/rippleSetting"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentRight="true">
+
+                        <ImageView
+                            android:id="@+id/imgSetting"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_setting"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </haiphat.com.bds.nghetuvan.utils.RippleView>
                 </RelativeLayout>
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            </RelativeLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            </android.support.v7.widget.Toolbar>
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 style="@style/matchWrap"
@@ -127,29 +102,17 @@
                 app:tabTextAppearance="@style/DetailPressReleaseTabText" />
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/nestedScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
+            style="@style/matchParent"
+            android:background="@color/backgroundAuth"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/clContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:descendantFocusability="blocksDescendants"
-                android:focusableInTouchMode="true">
-                <TextView
-                    android:id="@+id/tvContent"
-                    style="@style/wrapContent"
-                    android:text="Chua Co noi dung"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-            </android.support.constraint.ConstraintLayout>
-        </android.support.v4.widget.NestedScrollView>
+        <LinearLayout
+            android:id="@+id/ln_splash_background"
+            style="@style/matchParent"
+            android:background="@color/colorWhite"
+            android:orientation="horizontal"
+            android:visibility="gone"/>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
