--- a/app/src/main/res/layout/activity_detail_news.xml
+++ b/app/src/main/res/layout/activity_detail_news.xml
@@ -105,7 +105,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
             style="@style/matchParent"
-            android:background="@color/backgroundAuth"
+            android:background="@color/bgSelectProfile"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <LinearLayout
