--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,66 +3,126 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="haiphat.com.bds.nghetuvan.view.auth.LoginActivity">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilEmail"
-            style="@style/withWrap"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <android.support.constraint.ConstraintLayout style="@style/matchParent"
+            android:background="@drawable/ic_background_auth">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetEmail"
-                style="@style/matchWrap"
-                android:hint="Nhập Email" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilPassword"
-            style="@style/withWrap"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetPassword"
-                style="@style/matchWrap"
-                android:hint="Nhập password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+            <View
+                style="@style/matchParent"
+                android:alpha="0.5"
+                android:background="#6069a5" />
 
 
-        <Button
-            android:id="@+id/btnLogin"
-            style="@style/withWrap"
-            android:text="Đăng nhập"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>
-        <Button
-            android:id="@+id/btnRegister"
-            style="@style/withWrap"
-            android:text="Đăng ký"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
-        <TextView
-            android:id="@+id/txtForgotPassword"
-            style="@style/wrapContent"
-            android:text="Quên mật khẩu"
-            android:padding="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/btnRegister"/>
-    </android.support.constraint.ConstraintLayout>
+            <include
+                android:id="@+id/logo"
+                layout="@layout/logo_view"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                style="@style/wrapContent"
+                android:layout_marginTop="24dp"
+                android:text="Hệ thống giải pháp bất động sản"
+                android:textAllCaps="true"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/logo" />
+
+            <TextView
+                android:id="@+id/tvName"
+                style="@style/wrapContent"
+                android:layout_marginTop="5dp"
+                android:text="Số 1 việt nam"
+                android:textAllCaps="true"
+                android:textColor="@color/colorWhite"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilEmail"
+                style="@style/withWrap"
+                android:layout_marginTop="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvName">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/tetEmail"
+                    style="@style/matchWrap"
+                    android:gravity="center"
+                    android:hint="Nhập Email"
+                    android:textColor="@color/colorWhite" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilPassword"
+                style="@style/withWrap"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/tetPassword"
+                    style="@style/matchWrap"
+                    android:gravity="center"
+                    android:hint="Nhập password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/colorWhite" />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/btnLogin"
+                style="@style/withWrap"
+                android:layout_margin="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_view_btn_login_email"
+                android:text="Đăng nhập"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
+
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/clBottom"
+                style="@style/wrapContent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
+                app:layout_constraintStart_toStartOf="@+id/btnLogin"
+                app:layout_constraintTop_toBottomOf="@+id/btnLogin">
+
+                <TextView
+                    android:id="@+id/txtForgotPassword"
+                    style="@style/wrapContent"
+                    android:layout_marginRight="5dp"
+                    android:alpha="0.5"
+                    android:text="Quên mật khẩu?"
+                    android:textColor="@color/colorWhite"
+                    app:layout_constraintEnd_toStartOf="@+id/btnRegister" />
+
+                <TextView
+                    android:id="@+id/tvRegister"
+                    style="@style/withWrap"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Đăng ký"
+                    android:textColor="@color/colorWhite"
+                    app:layout_constraintStart_toEndOf="@+id/txtForgotPassword" />
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.constraint.ConstraintLayout>
 
 </layout>
