--- a/app/src/main/res/layout/activity_regester.xml
+++ b/app/src/main/res/layout/activity_regester.xml
@@ -3,90 +3,151 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <android.support.constraint.ConstraintLayout
         style="@style/matchParent"
-        tools:context="haiphat.com.bds.nghetuvan.view.auth.RegisterActivity">
+        android:background="@drawable/ic_background_auth">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilEmail"
-            style="@style/withWrap"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <View
+            style="@style/matchParent"
+            android:alpha="0.5"
+            android:background="#6069a5" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetEmail"
-                style="@style/matchWrap"
-                android:hint="Nhập Email" />
-        </android.support.design.widget.TextInputLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilName"
-            style="@style/withWrap"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+            <android.support.constraint.ConstraintLayout
+                style="@style/matchParent"
+                tools:context="haiphat.com.bds.nghetuvan.view.auth.RegisterActivity">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetName"
-                style="@style/matchWrap"
-                android:hint="Nhập họ và tên" />
-        </android.support.design.widget.TextInputLayout>
+                <haiphat.com.bds.nghetuvan.utils.RippleView
+                    android:id="@+id/rippleBack"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilPhone"
-            style="@style/withWrap"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilName">
+                    <ImageView
+                        android:id="@+id/imgBack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_back"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </haiphat.com.bds.nghetuvan.utils.RippleView>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetPhone"
-                style="@style/matchWrap"
-                android:hint="Nhập số điện thoại" />
-        </android.support.design.widget.TextInputLayout>
+                <TextView
+                    android:id="@+id/tvTitle"
+                    style="@style/wrapContent"
+                    android:layout_marginRight="50dp"
+                    android:ellipsize="end"
+                    android:fontFamily="sans-serif"
+                    android:maxLines="1"
+                    android:text="Đăng ký tài khoản"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    app:layout_constraintBottom_toBottomOf="@+id/rippleBack"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/rippleBack"
+                    app:layout_constraintTop_toBottomOf="@+id/rippleBack" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilPassword"
-            style="@style/withWrap"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilEmail"
+                    style="@style/withWrap"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetPassword"
-                style="@style/matchWrap"
-                android:hint="Nhập password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tetEmail"
+                        style="@style/matchWrap"
+                        android:gravity="center"
+                        android:hint="Nhập Email" />
+                </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/tilConfirmPassword"
-            style="@style/withWrap"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilPassword">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilName"
+                    style="@style/withWrap"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                    app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/tilEmail">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/tetConfirmPassword"
-                style="@style/matchWrap"
-                android:hint="Nhập password"
-                android:inputType="textPassword" />
-        </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tetName"
+                        style="@style/matchWrap"
+                        android:gravity="center"
+                        android:hint="Nhập họ và tên" />
+                </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/btnRegister"
-            style="@style/withWrap"
-            android:layout_marginTop="10dp"
-            android:text="Đăng Ký"
-            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-            app:layout_constraintStart_toStartOf="@+id/tilEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilPhone"
+                    style="@style/withWrap"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                    app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/tilName">
 
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tetPhone"
+                        style="@style/matchWrap"
+                        android:gravity="center"
+                        android:hint="Nhập số điện thoại" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilPassword"
+                    style="@style/withWrap"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                    app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/tilPhone">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tetPassword"
+                        style="@style/matchWrap"
+                        android:gravity="center"
+                        android:hint="Nhập mật khẩu"
+                        android:inputType="textPassword" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilConfirmPassword"
+                    style="@style/withWrap"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                    app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/tilPassword">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tetConfirmPassword"
+                        style="@style/matchWrap"
+                        android:gravity="center"
+                        android:hint="Nhập lại mật khẩu"
+                        android:inputType="textPassword" />
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btnRegister"
+                    style="@style/withWrap"
+                    android:layout_margin="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/bg_view_btn_login_email"
+                    android:text="Đăng Ký"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    app:layout_constraintEnd_toEndOf="@+id/tilEmail"
+                    app:layout_constraintStart_toStartOf="@+id/tilEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />
+
+            </android.support.constraint.ConstraintLayout>
+        </ScrollView>
     </android.support.constraint.ConstraintLayout>
+
+
 </layout>
