--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -1,65 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/flContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorWhite">
+            style="@style/matchWrap"
+            android:background="@android:color/transparent">
             <ImageView
                 android:id="@+id/imgSearch"
                 style="@style/wrapContent"
                 android:layout_gravity="right"
                 android:layout_marginRight="20dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_search_action_bar" />
-            <LinearLayout
-                android:id="@+id/clActionBar"
-                style="@style/matchWrap"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:visibility="gone">
+                android:visibility="visible"
+                android:src="@drawable/ic_setting" />
 
-                <EditText
-                    android:id="@+id/edSearch"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/colorWhite"
-                    android:layout_marginRight="15dp"
-                    android:focusable="true"
-                    android:hint="Tim kiếm"
-                    android:focusableInTouchMode="true"
-                    android:imeActionLabel="Search"
-                    android:imeOptions="actionSearch"
-                    android:theme="@style/AppTheme.WhiteAccent"
-                    android:inputType="text" />
-
-                <ImageView
-                    android:id="@+id/imgClear"
-                    style="@style/wrapContent"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_clear" />
-
-            </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/flContent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-</LinearLayout>
+
+</RelativeLayout>
