--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
                 android:id="@+id/tilEmail"
                 style="@style/withWrap"
                 android:layout_marginTop="60dp"
+                android:theme="@style/textInputLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvName">
@@ -61,6 +62,7 @@
                     android:id="@+id/tetEmail"
                     style="@style/matchWrap"
                     android:gravity="center"
+                    android:inputType="textEmailAddress"
                     android:hint="Nhập Email"
                     android:textColor="@color/colorWhite" />
             </android.support.design.widget.TextInputLayout>
@@ -69,6 +71,7 @@
                 android:id="@+id/tilPassword"
                 style="@style/withWrap"
                 android:layout_marginTop="10dp"
+                android:theme="@style/textInputLayout"
                 app:layout_constraintEnd_toEndOf="@+id/tilEmail"
                 app:layout_constraintStart_toStartOf="@+id/tilEmail"
                 app:layout_constraintTop_toBottomOf="@+id/tilEmail">
