update nav menu

--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -84,7 +84,7 @@
                     android:ellipsize="end"
                     android:fontFamily="sans-serif"
                     android:maxLines="1"
-                    android:text="Vinh tran"
+                    android:text="Hải phat"
                     android:textColor="@color/colorWhite"
                     android:textSize="24sp"
                     android:textStyle="normal"
@@ -98,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
                     android:letterSpacing="0.04"
-                    android:text="vinh.tran@digimed.vn"
+                    android:text="hai.phat@haiphattech.com"
                     android:textColor="@color/colorWhite"
                     android:textSize="12sp"
                     android:textStyle="normal"
